Comments sorting and tas's panel into imput form added

--- a/templates/blog/post/detail.html
+++ b/templates/blog/post/detail.html
@@ -8,20 +8,75 @@
 {{ post.body }}
 <h2>{{ comments_page.paginator.count }} comment{{ comments_page.paginator.count|pluralize }}</h2>
 
-<div id="comments">
-  {% for comment in comments_page %}
-  <div class="comment">
-    {% include "blog/post/includes/comment.html" with comment=comment post=post level=0 %}
-  </div>
-  {% empty %}
-  <p>There are no comments.</p>
-  {% endfor %}
-</div>
+<table class="comments-table">
+  <thead>
+    <tr>
+      <th style="width: 15%;">
+        <a
+          href="?sort=username&order={% if sort_field == 'username' and sort_order == 'asc' %}desc{% else %}asc{% endif %}">
+          User Name
+          {% if sort_field == 'username' %}
+          {% if sort_order == 'asc' %}
+          &#9650; <!-- Символ стрелки вверх -->
+          {% else %}
+          &#9660; <!-- Символ стрелки вниз -->
+          {% endif %}
+          {% endif %}
+        </a>
+      </th>
+      <th style="width: 22%;">
+        <a href="?sort=email&order={% if sort_field == 'email' and sort_order == 'asc' %}desc{% else %}asc{% endif %}">
+          Email
+          {% if sort_field == 'email' %}
+          {% if sort_order == 'asc' %}
+          &#9650;
+          {% else %}
+          &#9660;
+          {% endif %}
+          {% endif %}
+        </a>
+      </th>
+      <th style="width: 22%;">
+        <a
+          href="?sort=created&order={% if sort_field == 'created' and sort_order == 'asc' %}desc{% else %}asc{% endif %}">
+          Date Added
+          {% if sort_field == 'created' %}
+          {% if sort_order == 'asc' %}
+          &#9650;
+          {% else %}
+          &#9660;
+          {% endif %}
+          {% endif %}
+        </a>
+      </th>
+      <th style="width: 41%;">Comment</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for comment in comments_page %}
+    <tr>
+      <td>{{ comment.username_display }}</td>
+      <td>{{ comment.email_display }}</td>
+      <td>{{ comment.created }}</td>
+      <td>
+        <a href="{% url 'posts:comment_detail' post_id=post.pk comment_id=comment.pk %}">
+          {{ comment.body|truncatewords:10|safe }}
+        </a>
+      </td>
+    </tr>
+    {% empty %}
+    <tr>
+      <td colspan="4">There are no comments.</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
 {% if comments_page.has_other_pages %}
 <div class="pagination">
   <span class="step-links">
     {% if comments_page.has_previous %}
-    <a href="?page={{ comments_page.previous_page_number }}">Previous</a>
+    <a href="?page={{ comments_page.previous_page_number }}&sort={{ sort_field }}&order={{ sort_order }}">Previous</a>
     {% endif %}
 
     <span class="current">
@@ -29,13 +84,12 @@
     </span>
 
     {% if comments_page.has_next %}
-    <a href="?page={{ comments_page.next_page_number }}">Next</a>
+    <a href="?page={{ comments_page.next_page_number }}&sort={{ sort_field }}&order={{ sort_order }}">Next</a>
     {% endif %}
   </span>
 </div>
 {% endif %}
 
 <a href="{% url 'posts:post_comment' post.id %}">Add a new Comment</a>
-
 
 {% endblock %}
