--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -90,3 +90,30 @@ input[type=submit] {
     font-size:12px;
     color:#666;
 }
+
+#toolbar {
+    margin-bottom: 10px;
+}
+
+#toolbar button {
+    margin-right: 5px;
+    padding: 5px 8px;
+    font-size: 14px;
+}
+
+.comments-table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 10px; /* Отступ между ячейками по горизонтали и вертикали */
+}
+
+.comments-table th, .comments-table td {
+    padding: 10px;
+    text-align: left;
+    vertical-align: top;
+    border-bottom: 1px solid #ddd;
+}
+
+.comments-table th {
+    background-color: #f2f2f2;
+}
