--- a/templates/blog/post/add_comment.html
+++ b/templates/blog/post/add_comment.html
@@ -10,6 +10,14 @@
             <div style="flex: 1;">
                 <form method="post" action="{% url 'posts:post_comment' post.id %}" id="comment_form"
                     enctype="multipart/form-data" novalidate="">
+
+                    <div id="toolbar">
+                        <button type="button" data-tag="i">[i]</button>
+                        <button type="button" data-tag="strong">[strong]</button>
+                        <button type="button" data-tag="code">[code]</button>
+                        <button type="button" data-tag="a">[a]</button>
+                    </div>
+
                     {% csrf_token %}
                     {{ form.as_p }}
                     <div>
@@ -33,6 +41,42 @@
 
 
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const bodyField = document.getElementById('id_body');
+            const toolbar = document.getElementById('toolbar');
+
+            toolbar.addEventListener('click', function (event) {
+                if (event.target.tagName === 'BUTTON') {
+                    const tag = event.target.getAttribute('data-tag');
+                    insertTag(bodyField, tag);
+                    updatePreview();
+                }
+            });
+
+            function insertTag(textarea, tag) {
+                const start = textarea.selectionStart;
+                const end = textarea.selectionEnd;
+                const selectedText = textarea.value.substring(start, end);
+                let insertText = '';
+
+                if (tag === 'a') {
+                    const url = prompt('Enter the URL', 'http://');
+                    if (url) {
+                        insertText = `<a href="${url}">${selectedText || 'link text'}</a>`;
+                    } else {
+                        return;
+                    }
+                } else {
+                    insertText = `<${tag}>${selectedText}</${tag}>`;
+                }
+
+                textarea.setRangeText(insertText, start, end, 'end');
+                textarea.focus();
+            }
+        });
+
+
+
         document.addEventListener('DOMContentLoaded', function () {
             const bodyField = document.getElementById('id_body');
             const previewArea = document.getElementById('comment-preview');
@@ -86,6 +130,10 @@
                             window.location.href = "{% url 'posts:post_detail' post.pk %}";
                         } else {
                             // Handle form errors
+                            const captchaImg = document.querySelector('img.captcha');
+                            if (captchaImg) {
+                                captchaImg.src = captchaImg.src.split('?')[0] + '?reload=' + new Date().getTime();
+                            }
                             errorsDiv.innerHTML = data.errors_html;
                         }
                     })
