--- a/templates/blog/post/reply_comment.html
+++ b/templates/blog/post/reply_comment.html
@@ -1,5 +1,6 @@
 {% extends "blog/base.html" %}
 
+
 {% block title %}Reply to Comment{% endblock %}
 
 {% block content %}
@@ -19,6 +20,14 @@
                 <form method="post"
                     action="{% url 'posts:comment_reply' pk=post.id parent_comment_id=parent_comment.id %}"
                     id="comment_form" enctype="multipart/form-data" novalidate="">
+
+                    <div id="toolbar">
+                        <button type="button" data-tag="i">[i]</button>
+                        <button type="button" data-tag="strong">[strong]</button>
+                        <button type="button" data-tag="code">[code]</button>
+                        <button type="button" data-tag="a">[a]</button>
+                    </div>
+
                     {% csrf_token %}
                     {{ form.as_p }}
                     <div>
@@ -43,6 +52,40 @@
     <div id="form-errors"></div>
 
     <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const bodyField = document.getElementById('id_body');
+            const toolbar = document.getElementById('toolbar');
+
+            toolbar.addEventListener('click', function (event) {
+                if (event.target.tagName === 'BUTTON') {
+                    const tag = event.target.getAttribute('data-tag');
+                    insertTag(bodyField, tag);
+                    updatePreview();
+                }
+            });
+
+            function insertTag(textarea, tag) {
+                const start = textarea.selectionStart;
+                const end = textarea.selectionEnd;
+                const selectedText = textarea.value.substring(start, end);
+                let insertText = '';
+
+                if (tag === 'a') {
+                    const url = prompt('Enter the URL', 'http://');
+                    if (url) {
+                        insertText = `<a href="${url}">${selectedText || 'link text'}</a>`;
+                    } else {
+                        return;
+                    }
+                } else {
+                    insertText = `<${tag}>${selectedText}</${tag}>`;
+                }
+
+                textarea.setRangeText(insertText, start, end, 'end');
+                textarea.focus();
+            }
+        });
+
         document.addEventListener('DOMContentLoaded', function () {
             const bodyField = document.getElementById('id_body');
             const previewArea = document.getElementById('comment-preview');
@@ -97,6 +140,10 @@
                             window.location.href = "{% url 'posts:post_detail' post.pk %}";
                         } else {
                             // Handle form errors
+                            const captchaImg = document.querySelector('img.captcha');
+                            if (captchaImg) {
+                                captchaImg.src = captchaImg.src.split('?')[0] + '?reload=' + new Date().getTime();
+                            }
                             errorsDiv.innerHTML = data.errors_html;
                         }
                     })
@@ -107,7 +154,6 @@
             });
         });
     </script>
-
 
 </main>
 {% endblock %}
