--- a/templates/blog/post/add_comment.html
+++ b/templates/blog/post/add_comment.html
@@ -6,7 +6,7 @@
 <main>
     <div>
         <h1>Add a Comment for "{{ post.title }}"</h1>
-        <div style="display: flex; align-items: flex-start; gap: 20px;">
+        <div class="add_comment">
             {% include "blog/post/includes/comment_form.html" with form_action_url=form_action_url %}
         </div>
         <br class="clear">
