--- a/templates/blog/post/comment_detail.html
+++ b/templates/blog/post/comment_detail.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load static %}
 
 {% block title %}Comment Detail{% endblock %}
 
@@ -19,28 +20,25 @@
     {{ comment.body|safe }}
 </div>
 
-{% if comment.image %}
-<div>
+{% if comment.image or comment.text_file %}
+<div class="files-container">
+    {% if comment.image %}
     <a href="{{ comment.image.url }}" data-lightbox="image-1">
-        <img src="{{ comment.image.url }}" alt="Image" style="max-width: 40px; max-height: 30px;">
+        <img src="{{ comment.image.url }}" alt="Image" class="picture_preview">
     </a>
-</div>
-{% endif %}
-{% if comment.text_file %}
-<div>
-    <a data-fancybox data-type="ajax" data-src="{% url 'posts:text_file_view' comment.id %}" href="javascript:;">
-        View Text File
+    {% endif %}
+    {% if comment.text_file %}
+    <a data-fancybox data-type="ajax" data-src="{% url 'posts:text_file_view' comment.id %}" href="javascript:;"
+        class="file_link">
+        <img src="{% static 'images/text_file_icon.png' %}" alt="Text File Icon" class="file_icon">
     </a>
+    {% endif %}
 </div>
 {% endif %}
 
-<!-- Display the replies -->
 <h3>Replies:</h3>
 {% include "blog/post/includes/replies.html" with comments=replies post=post %}
-
-<!-- Link to add a reply to this comment -->
 <p>
     <a href="{% url 'posts:comment_reply' pk=post.pk parent_comment_id=comment.pk %}">Reply to this Comment</a>
 </p>
-
 {% endblock %}
