--- a/templates/blog/post/includes/comment_preview.html
+++ b/templates/blog/post/includes/comment_preview.html
@@ -1,4 +1,4 @@
-<div style="flex: 1; border: 1px solid #ccc; padding: 10px;">
+<div class="comment_preview">
     <h3>Preview:</h3>
     <div id="comment-preview" class="comment-preview">
         <p><em>Your comment will appear here...</em></p>
